Add dependency on build-mingw for build-msvc

--- a/.github/workflows/win.yml
+++ b/.github/workflows/win.yml
@@ -15,4 +15,5 @@ jobs:
     uses: ./.github/workflows/win-mingw.yml
 
   build-msvc:
+    needs: build-mingw
     uses: ./.github/workflows/win-msvc.yml
