--- a/.github/workflows/test-msvc.yml
+++ b/.github/workflows/test-msvc.yml
@@ -38,6 +38,16 @@ jobs:
             cxxflags_base: "-O2 -fuse-ld=lld -flto=thin -MD -std:c++14 -W0"
             ldflags_base: "-fuse-ld=lld -flto=thin"
             artifact_name: ffmpeg-win64-clang
+          - compiler: icx-cl
+            cc: icx-cl.exe
+            cxx: icx-cl.exe
+            msar: llvm-lib.exe
+            msranlib: llvm-ranlib.exe
+            toolchain: msvc
+            cflags_base: "-O2 -fuse-ld=lld -Qipo -MD -W0"
+            cxxflags_base: "-O2 -fuse-ld=lld -Qipo -MD -std:c++14 -W0"
+            ldflags_base: "-fuse-ld=lld -Qipo"
+            artifact_name: ffmpeg-win64-intel
 
     steps:
     - name: Checkout repository
@@ -71,6 +81,18 @@ jobs:
           tar
           xz
           patch
+
+    - name: Install Intel oneAPI SDK
+      shell: pwsh
+      run: |
+        $Url       = "https://registrationcenter-download.intel.com/akdlm/1f18901e-877d-469d-a41a-a10f11b39336/intel-oneapi-base-toolkit-2025.3.0.372_offline.exe"
+        $OutPath   = ".\intel-oneapi-base-toolkit-2025.3.0.372_offline.exe"
+        
+        # 使用 Invoke-WebRequest
+        Invoke-WebRequest -Uri $Url -OutFile $OutPath
+        Start-Process ".\intel-oneapi-base-toolkit-2025.3.0.372_offline.exe" `
+        -Wait `
+        -ArgumentList '-s', '-a', '--silent', '--eula', 'accept', '--components', 'intel.oneapi.win.dpcpp-cpp-compiler', '--install-dir', 'C:\Intel\oneAPI'
 
     - name: Install NASM for Visual Studio
       shell: pwsh
