--- a/.github/workflows/test-msvc.yml
+++ b/.github/workflows/test-msvc.yml
@@ -16,7 +16,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        compiler: [msvc, clang-cl]
+        compiler: [msvc, clang-cl, icx-cl]
         include:
           - compiler: msvc
             cc: cl.exe
@@ -82,17 +82,19 @@ jobs:
           xz
           patch
 
-    - name: Install Intel oneAPI SDK
-      shell: pwsh
-      run: |
-        $Url       = "https://registrationcenter-download.intel.com/akdlm/1f18901e-877d-469d-a41a-a10f11b39336/intel-oneapi-base-toolkit-2025.3.0.372_offline.exe"
-        $OutPath   = ".\intel-oneapi-base-toolkit-2025.3.0.372_offline.exe"
-        
-        # 使用 Invoke-WebRequest
-        Invoke-WebRequest -Uri $Url -OutFile $OutPath
-        Start-Process ".\intel-oneapi-base-toolkit-2025.3.0.372_offline.exe" `
-        -Wait `
-        -ArgumentList '-s', '-a', '--silent', '--eula', 'accept', '--components', 'intel.oneapi.win.dpcpp-cpp-compiler', '--install-dir', 'C:\Intel\oneAPI'
+    - name: cache install
+      id: cache-install
+      if: matrix.compiler != icx-cl
+      uses: actions/cache@v3
+      with:
+        path: |
+            C:\Program Files (x86)\Intel\oneAPI\setvars-vcvarsall.bat
+            C:\Program Files (x86)\Intel\oneAPI\compiler
+        key: install-${{ env.CACHE_NUMBER }}-${{ env.WINDOWS_HPCKIT_URL }}-${{ env.WINDOWS_CPP_COMPONENTS }}-compiler-${{ hashFiles('**/scripts/cache_exclude_windows.sh') }}
+   
+    - name: install
+      if: steps.cache-install.outputs.cache-hit != 'true' && matrix.compiler != icx-cl
+      run: .github/scripts/install_windows.bat https://registrationcenter-download.intel.com/akdlm/IRC_NAS/1f18901e-877d-469d-a41a-a10f11b39336/intel-oneapi-base-toolkit-2025.3.0.372_offline.exe intel.oneapi.win.cpp-dpcpp-common
 
     - name: Install NASM for Visual Studio
       shell: pwsh
