--- a/.github/workflows/test-msvc.yml
+++ b/.github/workflows/test-msvc.yml
@@ -155,7 +155,7 @@ jobs:
         # Find vcvars64.bat using vswhere
         # 假設這個變數是由 GitHub Actions 傳入
         if ("${{ matrix.compiler }}" -eq "icx-cl") {
-          $vcvarsPath = "C:\Program Files (x86)\Intel\oneAPI\setvars-vcvarsall.bat"
+          $vcvarsPath = "C:\Program Files (x86)\Intel\oneAPI\setvars.bat"
         }
         else {
           $vsPath = vswhere -latest -property installationPath
