--- a/.github/workflows/test-msvc.yml
+++ b/.github/workflows/test-msvc.yml
@@ -224,7 +224,7 @@ jobs:
         
         # Setup MSVC paths
         if [ "${{ matrix.compiler }}" = "icx-cl" ]; then
-          MSVC_BASE=""/c/Program Files (x86)/Intel/oneAPI/compiler/latest/bin/"
+          MSVC_BASE="/c/Program Files (x86)/Intel/oneAPI/compiler/latest/bin/"
         else
           MSVC_BASE="/c/Program Files/Microsoft Visual Studio/2022/Enterprise/VC/Tools/MSVC"
         fi
