Add -mssse3 flag to compiler options

--- a/.github/workflows/test-msvc.yml
+++ b/.github/workflows/test-msvc.yml
@@ -44,8 +44,8 @@ jobs:
             msar: llvm-lib.exe
             msranlib: llvm-ranlib.exe
             toolchain: msvc
-            cflags_base: "-O2 -fuse-ld=lld -Qipo -MD -W0"
-            cxxflags_base: "-O2 -fuse-ld=lld -Qipo -MD -std:c++14 -W0"
+            cflags_base: "-O2 -fuse-ld=lld -Qipo -MD -W0 -mssse3"
+            cxxflags_base: "-O2 -fuse-ld=lld -Qipo -MD -std:c++14 -W0 -mssse3"
             ldflags_base: "-fuse-ld=lld -Qipo"
             artifact_name: ffmpeg-win64-intel
 
